--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "hiredis": "^0.5.0",
     "ioredis": "^3.1.4",
     "mathjs": "^3.16.3",
-    "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
+    "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "redis": "^2.8.0",
     "restify": "^6.0.1",
     "restify-errors": "^5.0.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
     "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball",
+    "rtc-switchboard": "^3.2.0",
     "tv4": "^1.3.0",
     "uuid": "^3.1.0",
     "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
