--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stereostream-rest-api",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Sample REST API scaffold built on Node.JS in TypeScript with restify and waterline (with TypeORM support).",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -26,6 +26,7 @@
     "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "pg": "^7.3.0",
     "redis": "^2.8.0",
+    "reflect-metadata": "^0.1.10",
     "restify": "^6.0.1",
     "restify-errors": "^5.0.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
@@ -46,18 +47,18 @@
     "@types/ioredis": "0.0.25",
     "@types/mathjs": "0.0.35",
     "@types/mocha": "^2.2.43",
-    "@types/node": "^8.0.31",
+    "@types/node": "^8.0.32",
     "@types/redis": "^2.6.0",
     "@types/restify": "^5.0.5",
     "@types/restify-errors": "^4.3.2",
-    "@types/superagent": "^3.5.5",
+    "@types/superagent": "^3.5.6",
     "@types/supertest": "^2.0.3",
     "@types/tv4": "^1.2.28",
     "@types/uuid": "^3.4.2",
     "chai": "^4.1.2",
     "chai-json-schema": "^1.5.0",
     "chai-json-schema-ajv": "^0.2.4",
-    "mocha": "^3.5.3",
+    "mocha": "3.5.3",
     "supertest": "^3.0.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.5.3"
