--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stereostream-rest-api",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Sample REST API scaffold built on Node.JS in TypeScript with restify and waterline (with TypeORM support).",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -13,7 +13,7 @@
     "test": "mocha test --recursive"
   },
   "dependencies": {
-    "argon2": "^0.16.1",
+    "argon2": "^0.16.2",
     "async": "^2.5.0",
     "async-es": "^2.5.0",
     "bunyan": "^1.8.12",
@@ -33,21 +33,21 @@
     "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball",
     "socket.io": "^2.0.3",
     "tv4": "^1.3.0",
-    "typeorm": "0.1.0-alpha.50",
+    "typeorm": "0.1.0",
     "uuid": "^3.1.0",
     "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
     "waterline-postgresql": "^0.14.8"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.4",
-    "@types/async": "^2.0.43",
+    "@angular/cli": "^1.4.6",
+    "@types/async": "^2.0.44",
     "@types/bunyan": "1.8.3",
     "@types/chai": "^4.0.4",
     "@types/faker": "^4.1.1",
     "@types/ioredis": "0.0.25",
     "@types/mathjs": "0.0.35",
     "@types/mocha": "^2.2.43",
-    "@types/node": "^8.0.32",
+    "@types/node": "^8.0.34",
     "@types/redis": "^2.6.0",
     "@types/restify": "^5.0.5",
     "@types/restify-errors": "^4.3.2",
@@ -57,7 +57,7 @@
     "@types/uuid": "^3.4.2",
     "chai": "^4.1.2",
     "chai-json-schema": "^1.5.0",
-    "chai-json-schema-ajv": "^0.2.4",
+    "chai-json-schema-ajv": "^1.0.0",
     "mocha": "3.5.3",
     "supertest": "^3.0.0",
     "ts-node": "^3.3.0",
