--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "stereostream-rest-api",
-  "version": "0.0.10",
-  "description": "Sample REST API scaffold built on Node.JS in TypeScript with restify and waterline (with TypeORM support).",
+  "version": "0.0.11",
+  "description": "StereoStream backend REST API scaffold built on Node.JS in TypeScript with restify and TypeORM.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
   "repository": {
-    "url": "https://github.com/SamuelMarks/restify_waterline_scaffold"
+    "url": "https://github.com/stereostream/stereostream-rest-api"
   },
   "license": "Apache-2.0",
   "scripts": {
@@ -20,38 +20,36 @@
     "custom-restify-errors": "https://api.github.com/repos/SamuelMarks/custom-restify-errors-dist/tarball",
     "faker": "^4.1.0",
     "hiredis": "^0.5.0",
-    "ioredis": "^3.2.1",
-    "mathjs": "^3.16.5",
+    "ioredis": "^3.2.2",
+    "mathjs": "^3.17.0",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "pg": "^7.4.0",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.10",
-    "restify": "^6.3.2",
+    "restify": "^6.3.4",
     "restify-errors": "^5.0.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
     "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball",
     "socket.io": "^2.0.4",
     "tv4": "^1.3.0",
-    "typeorm": "0.1.2",
-    "uuid": "^3.1.0",
-    "waterline": "https://api.github.com/repos/SamuelMarks/waterline/tarball/c91bdf46d400180ae7e800f684f8fb44f8fed9a5",
-    "waterline-postgresql": "^0.50.0"
+    "typeorm": "0.1.7",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@types/async": "^2.0.45",
     "@types/bunyan": "1.8.3",
-    "@types/chai": "^4.0.4",
-    "@types/faker": "^4.1.1",
-    "@types/ioredis": "0.0.27",
+    "@types/chai": "^4.0.6",
+    "@types/faker": "^4.1.2",
+    "@types/ioredis": "3.2.1",
     "@types/mathjs": "0.0.35",
     "@types/mocha": "^2.2.44",
-    "@types/node": "^8.0.50",
+    "@types/node": "^8.0.53",
     "@types/redis": "^2.8.1",
     "@types/restify": "^5.0.6",
     "@types/restify-errors": "^4.3.2",
     "@types/superagent": "^3.5.6",
-    "@types/supertest": "^2.0.3",
+    "@types/supertest": "^2.0.4",
     "@types/tv4": "^1.2.28",
     "@types/uuid": "^3.4.3",
     "chai": "^4.1.2",
@@ -60,6 +58,6 @@
     "mocha": "4.0.1",
     "supertest": "^3.0.0",
     "ts-node": "^3.3.0",
-    "typescript": "^2.6.1"
+    "typescript": "^2.6.2"
   }
 }
