--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stereostream-rest-api",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "StereoStream backend REST API scaffold built on Node.JS in TypeScript with restify and TypeORM.",
   "main": "main.js",
   "author": "Samuel Marks <samuel@offscale.io>",
@@ -20,8 +20,10 @@
     "custom-restify-errors": "https://api.github.com/repos/SamuelMarks/custom-restify-errors-dist/tarball",
     "faker": "^4.1.0",
     "hiredis": "^0.5.0",
+    "hls-server": "^1.2.2",
     "ioredis": "^3.2.2",
     "mathjs": "^3.17.0",
+    "mime-types": "https://api.github.com/repos/SamuelMarks/mime-types/tarball/es6-and-updates",
     "nodejs-utils": "https://api.github.com/repos/SamuelMarks/nodejs-utils-dist/tarball",
     "orm-mw": "https://api.github.com/repos/SamuelMarks/orm-mw-dist/tarball",
     "pg": "^7.4.0",
@@ -31,6 +33,7 @@
     "restify-errors": "^5.0.0",
     "restify-validators": "https://api.github.com/repos/SamuelMarks/restify-validators-dist/tarball",
     "routes-merger": "https://api.github.com/repos/SamuelMarks/routes-merger-dist/tarball",
+    "slugify": "^1.2.6",
     "socket.io": "^2.0.4",
     "tv4": "^1.3.0",
     "typeorm": "0.1.7",
@@ -43,6 +46,7 @@
     "@types/faker": "^4.1.2",
     "@types/ioredis": "3.2.1",
     "@types/mathjs": "0.0.35",
+    "@types/mime-types": "^2.1.0",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.53",
     "@types/redis": "^2.8.1",
